--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.6",
+    "@mantine/carousel": "^6.0.0",
     "@mantine/core": "^6.0.0",
     "@mantine/hooks": "^6.0.0",
     "@tanstack/react-query": "^4.26.0",
@@ -16,6 +17,7 @@
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
+    "embla-carousel-react": "^7.0.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
